--- a/diff.special.html
+++ b/diff.special.html
@@ -30,8 +30,7 @@ Deletion of semantically well-defined feature.
 Semantic transformation.
 If volatile semantics are required for the copy,
 a user-declared constructor or assignment must
-be provided. [&nbsp;<i>Note:</i><span class='space'></span> This user-declared
-constructor may be explicitly defaulted. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
+be provided.
 If non-volatile semantics are required,
 an explicit
 <span class='texttt'>const_cast</span>
