--- a/expr.const.html
+++ b/expr.const.html
@@ -161,7 +161,7 @@ arguments (<a href='temp.arg'>[temp.arg]</a>).
 an expression, contextually converted to <span class='texttt'>bool</span> (Clause<a href='conv'>[conv]</a>),
 where the converted expression is a constant expression and
 the conversion sequence contains only the conversions above.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p ><span class='indexparent'><a class='index' id='expression,constant'></a></span>A <a class='hidden_link' href='#def:constant_expression' id='def:constant_expression'><i>constant expression</i></a> is either
-a glvalue core constant expression whose value refers to
+a glvalue core constant expression that refers to
 an entity that is a permitted result of a constant expression (as defined below), or
 a prvalue core constant expression whose value
 satisfies the following constraints:</p><ul ><li ><p >if the value is an object of class type,
