--- a/string.require.html
+++ b/string.require.html
@@ -7,7 +7,11 @@ as <span class='texttt'>charT</span>. Every object of type
 <span class='texttt'>basic_string&lt;charT, traits, Allocator&gt;</span> shall use an object of type
 <span class='texttt'>Allocator</span> to allocate and free storage for the contained <span class='texttt'>charT</span>
 objects as needed. The <span class='texttt'>Allocator</span> object used shall be
-obtained as described in <a href='container.requirements.general'>[container.requirements.general]</a>.</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >References, pointers, and iterators referring to the elements of a
+obtained as described in <a href='container.requirements.general'>[container.requirements.general]</a>.
+[&nbsp;<i>Note:</i><span class='space'></span> In every specialization
+<span class='texttt'>basic_string&lt;charT, traits, Allocator&gt;</span>, the type
+<span class='texttt'>traits::char_type</span> shall be the same type as
+<span class='texttt'>charT</span>; see <a href='char.traits'>[char.traits]</a>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >References, pointers, and iterators referring to the elements of a
 <span class='texttt'>basic_string</span> sequence may be
 invalidated by the following uses of that <span class='texttt'>basic_string</span> object:</p><ul ><li ><p >as an argument to any standard library function taking a reference to non-const
 <span class='texttt'>basic_string</span> as an argument.<a class='footnotenum' href='#footnote-228'>228</a></p></li><li ><p >Calling non-const member functions, except
