--- a/utilities.html
+++ b/utilities.html
@@ -2358,7 +2358,7 @@ template &lt;size_t I, class... Types&gt;
 template &lt;size_t I, class... Types&gt;
   constexpr variant_alternative_t&lt;I, variant&lt;Types...&gt;&gt; const&amp;&amp; get(const variant&lt;Types...&gt;&amp;&amp; v);
 </code></p><div class='itemdescr'></div><div class='para' id='variant.get-3'><div class='marginalizedparent'><a class='marginalized' href='#variant.get-3'>3</a></div><div class='itemdescr'><p ><i>Requires:</i>
-<span class='texttt'>I &lt; sizeof...(Types)</span>, and <span class='math'><span class='mathalpha'>T</span><sub ><span class='mathalpha'>I</span></sub></span> is not (possibly cv-qualified) <span class='texttt'>void</span>.
+<span class='texttt'>I &lt; sizeof...(Types)</span>.
 Otherwise the program is ill-formed.</p></div></div><div class='para' id='variant.get-4'><div class='marginalizedparent'><a class='marginalized' href='#variant.get-4'>4</a></div><div class='itemdescr'><p ><i>Effects:</i>
 If <span class='texttt'>v.index()</span> is <span class='texttt'>I</span>, returns a reference to the object stored in
 the <span class='texttt'>variant</span>. Otherwise, throws an exception of type <span class='texttt'>bad_variant_access</span>.
@@ -2368,8 +2368,8 @@ template &lt;class T, class... Types&gt; constexpr T&amp;&amp; get(variant&lt;Ty
 template &lt;class T, class... Types&gt; constexpr const T&amp; get(const variant&lt;Types...&gt;&amp; v);
 template &lt;class T, class... Types&gt; constexpr const T&amp;&amp; get(const variant&lt;Types...&gt;&amp;&amp; v);
 </code></p><div class='itemdescr'></div><div class='para' id='variant.get-5'><div class='marginalizedparent'><a class='marginalized' href='#variant.get-5'>5</a></div><div class='itemdescr'><p ><i>Requires:</i>
-The type <span class='texttt'>T</span> occurs exactly once in <span class='texttt'>Types...</span>, and <span class='texttt'>T</span> is
-not (possibly cv-qualified) <span class='texttt'>void</span>. Otherwise, the program is ill-formed.</p></div></div><div class='para' id='variant.get-6'><div class='marginalizedparent'><a class='marginalized' href='#variant.get-6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i>
+The type <span class='texttt'>T</span> occurs exactly once in <span class='texttt'>Types...</span>.
+Otherwise, the program is ill-formed.</p></div></div><div class='para' id='variant.get-6'><div class='marginalizedparent'><a class='marginalized' href='#variant.get-6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i>
 If <span class='texttt'>v</span> holds a value of type <span class='texttt'>T</span>, returns a reference to that value.
 Otherwise, throws an exception of type <span class='texttt'>bad_variant_access</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='get_if'></a></span><span class='indexparent'><a class='index' id='variant,get_if'></a></span><code class='itemdecl'>
@@ -4972,7 +4972,7 @@ template&lt;class T, class U&gt; shared_ptr&lt;T&gt; static_pointer_cast(const s
 </code></p><div class='itemdescr'></div><div class='para' id='util.smartptr.shared.cast-1'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-1'>1</a></div><div class='itemdescr'><p ><i>Requires:</i>  The expression <span class='texttt'>static_cast&lt;T*&gt;(r.get())</span> shall
 be well formed.</p></div></div><div class='para' id='util.smartptr.shared.cast-2'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>  If <span class='texttt'>r</span> is <i>empty</i>, an <i>empty</i>
 <span class='texttt'>shared_ptr&lt;T&gt;</span>; otherwise, a <span class='texttt'>shared_ptr&lt;T&gt;</span> object that
-stores <span class='texttt'>static_cast&lt;T*&gt;(r.get())</span> and <i>shares ownership</i>
+<i>shares ownership</i>
 with <span class='texttt'>r</span>.</p></div></div><div class='para' id='util.smartptr.shared.cast-3'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-3'>3</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>w.get() == static_cast&lt;T*&gt;(r.get())</span> and
 <span class='texttt'>w.use_count() == r.use_count()</span>, where <span class='texttt'>w</span> is the return value.</p></div></div><div class='para' id='util.smartptr.shared.cast-4'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-4'>4</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i><span class='space'></span> The seemingly equivalent expression
 <span class='texttt'>shared_ptr&lt;T&gt;(static_cast&lt;T*&gt;(r.get()))</span>
@@ -4983,8 +4983,9 @@ template&lt;class T, class U&gt; shared_ptr&lt;T&gt; dynamic_pointer_cast(const 
 </code></p><div class='itemdescr'></div><div class='para' id='util.smartptr.shared.cast-5'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-5'>5</a></div><div class='itemdescr'><p ><i>Requires:</i>  The expression <span class='texttt'>dynamic_cast&lt;T*&gt;(r.get())</span>
 shall be well formed and shall have well defined behavior.</p></div></div><div class='para' id='util.smartptr.shared.cast-6'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i>
 </p><ul ><li ><p >When <span class='texttt'>dynamic_cast&lt;T*&gt;(r.get())</span> returns a nonzero value, a
-  <span class='texttt'>shared_ptr&lt;T&gt;</span> object that stores a copy of it and <i>shares
-  ownership</i> with <span class='texttt'>r</span>;</p></li><li ><p >Otherwise, an <i>empty</i> <span class='texttt'>shared_ptr&lt;T&gt;</span> object.
+  <span class='texttt'>shared_ptr&lt;T&gt;</span> object that
+  <i>shares ownership</i>
+  with <span class='texttt'>r</span>;</p></li><li ><p >Otherwise, an <i>empty</i> <span class='texttt'>shared_ptr&lt;T&gt;</span> object.
 </p></li></ul></div></div><div class='para' id='util.smartptr.shared.cast-7'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-7'>7</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>w.get() == dynamic_cast&lt;T*&gt;(r.get())</span>, where <span class='texttt'>w</span> is the return value.</p></div></div><div class='para' id='util.smartptr.shared.cast-8'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-8'>8</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i><span class='space'></span>  The seemingly equivalent expression
 <span class='texttt'>shared_ptr&lt;T&gt;(dynamic_cast&lt;T*&gt;(r.get()))</span> will eventually result in
 undefined behavior, attempting to delete the same object twice. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
@@ -4992,8 +4993,9 @@ undefined behavior, attempting to delete the same object twice. <i>&nbsp;—&nbs
 template&lt;class T, class U&gt; shared_ptr&lt;T&gt; const_pointer_cast(const shared_ptr&lt;U&gt;&amp; r) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='util.smartptr.shared.cast-9'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-9'>9</a></div><div class='itemdescr'><p ><i>Requires:</i>  The expression <span class='texttt'>const_cast&lt;T*&gt;(r.get())</span> shall
 be well formed.</p></div></div><div class='para' id='util.smartptr.shared.cast-10'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-10'>10</a></div><div class='itemdescr'><p ><i>Returns:</i>  If <span class='texttt'>r</span> is empty, an empty <span class='texttt'>shared_ptr&lt;T&gt;</span>; otherwise, a
-<span class='texttt'>shared_ptr&lt;T&gt;</span> object that stores <span class='texttt'>const_cast&lt;T*&gt;(r.get())</span> and shares
-ownership with <span class='texttt'>r</span>.</p></div></div><div class='para' id='util.smartptr.shared.cast-11'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-11'>11</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>w.get() == const_cast&lt;T*&gt;(r.get())</span> and
+<span class='texttt'>shared_ptr&lt;T&gt;</span> object that
+shares ownership
+with <span class='texttt'>r</span>.</p></div></div><div class='para' id='util.smartptr.shared.cast-11'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-11'>11</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>w.get() == const_cast&lt;T*&gt;(r.get())</span> and
 <span class='texttt'>w.use_count() == r.use_count()</span>, where <span class='texttt'>w</span> is the return value.</p></div></div><div class='para' id='util.smartptr.shared.cast-12'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.cast-12'>12</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i><span class='space'></span> The seemingly equivalent expression
 <span class='texttt'>shared_ptr&lt;T&gt;(const_cast&lt;T*&gt;(r.get()))</span> will eventually result in
 undefined behavior, attempting to delete the same object twice. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
