--- a/variant.get.html
+++ b/variant.get.html
@@ -17,7 +17,7 @@ template &lt;size_t I, class... Types&gt;
 template &lt;size_t I, class... Types&gt;
   constexpr variant_alternative_t&lt;I, variant&lt;Types...&gt;&gt; const&amp;&amp; get(const variant&lt;Types...&gt;&amp;&amp; v);
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Requires:</i>
-<span class='texttt'>I &lt; sizeof...(Types)</span>, and <span class='math'><span class='mathalpha'>T</span><sub ><span class='mathalpha'>I</span></sub></span> is not (possibly cv-qualified) <span class='texttt'>void</span>.
+<span class='texttt'>I &lt; sizeof...(Types)</span>.
 Otherwise the program is ill-formed.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Effects:</i>
 If <span class='texttt'>v.index()</span> is <span class='texttt'>I</span>, returns a reference to the object stored in
 the <span class='texttt'>variant</span>. Otherwise, throws an exception of type <span class='texttt'>bad_variant_access</span>.
@@ -27,8 +27,8 @@ template &lt;class T, class... Types&gt; constexpr T&amp;&amp; get(variant&lt;Ty
 template &lt;class T, class... Types&gt; constexpr const T&amp; get(const variant&lt;Types...&gt;&amp; v);
 template &lt;class T, class... Types&gt; constexpr const T&amp;&amp; get(const variant&lt;Types...&gt;&amp;&amp; v);
 </code></p><div class='itemdescr'></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Requires:</i>
-The type <span class='texttt'>T</span> occurs exactly once in <span class='texttt'>Types...</span>, and <span class='texttt'>T</span> is
-not (possibly cv-qualified) <span class='texttt'>void</span>. Otherwise, the program is ill-formed.</p></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i>
+The type <span class='texttt'>T</span> occurs exactly once in <span class='texttt'>Types...</span>.
+Otherwise, the program is ill-formed.</p></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i>
 If <span class='texttt'>v</span> holds a value of type <span class='texttt'>T</span>, returns a reference to that value.
 Otherwise, throws an exception of type <span class='texttt'>bad_variant_access</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='get_if'></a></span><span class='indexparent'><a class='index' id='variant,get_if'></a></span><code class='itemdecl'>
