--- a/util.smartptr.shared.cast.html
+++ b/util.smartptr.shared.cast.html
@@ -3,7 +3,7 @@ template&lt;class T, class U&gt; shared_ptr&lt;T&gt; static_pointer_cast(const s
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Requires:</i>  The expression <span class='texttt'>static_cast&lt;T*&gt;(r.get())</span> shall
 be well formed.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>  If <span class='texttt'>r</span> is <i>empty</i>, an <i>empty</i>
 <span class='texttt'>shared_ptr&lt;T&gt;</span>; otherwise, a <span class='texttt'>shared_ptr&lt;T&gt;</span> object that
-stores <span class='texttt'>static_cast&lt;T*&gt;(r.get())</span> and <i>shares ownership</i>
+<i>shares ownership</i>
 with <span class='texttt'>r</span>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>w.get() == static_cast&lt;T*&gt;(r.get())</span> and
 <span class='texttt'>w.use_count() == r.use_count()</span>, where <span class='texttt'>w</span> is the return value.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i><span class='space'></span> The seemingly equivalent expression
 <span class='texttt'>shared_ptr&lt;T&gt;(static_cast&lt;T*&gt;(r.get()))</span>
@@ -14,8 +14,9 @@ template&lt;class T, class U&gt; shared_ptr&lt;T&gt; dynamic_pointer_cast(const 
 </code></p><div class='itemdescr'></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Requires:</i>  The expression <span class='texttt'>dynamic_cast&lt;T*&gt;(r.get())</span>
 shall be well formed and shall have well defined behavior.</p></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i>
 </p><ul ><li ><p >When <span class='texttt'>dynamic_cast&lt;T*&gt;(r.get())</span> returns a nonzero value, a
-  <span class='texttt'>shared_ptr&lt;T&gt;</span> object that stores a copy of it and <i>shares
-  ownership</i> with <span class='texttt'>r</span>;</p></li><li ><p >Otherwise, an <i>empty</i> <span class='texttt'>shared_ptr&lt;T&gt;</span> object.
+  <span class='texttt'>shared_ptr&lt;T&gt;</span> object that
+  <i>shares ownership</i>
+  with <span class='texttt'>r</span>;</p></li><li ><p >Otherwise, an <i>empty</i> <span class='texttt'>shared_ptr&lt;T&gt;</span> object.
 </p></li></ul></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>w.get() == dynamic_cast&lt;T*&gt;(r.get())</span>, where <span class='texttt'>w</span> is the return value.</p></div></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i><span class='space'></span>  The seemingly equivalent expression
 <span class='texttt'>shared_ptr&lt;T&gt;(dynamic_cast&lt;T*&gt;(r.get()))</span> will eventually result in
 undefined behavior, attempting to delete the same object twice. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
@@ -23,8 +24,9 @@ undefined behavior, attempting to delete the same object twice. <i>&nbsp;—&nbs
 template&lt;class T, class U&gt; shared_ptr&lt;T&gt; const_pointer_cast(const shared_ptr&lt;U&gt;&amp; r) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='9'><div class='marginalizedparent'><a class='marginalized' href='#9'>9</a></div><div class='itemdescr'><p ><i>Requires:</i>  The expression <span class='texttt'>const_cast&lt;T*&gt;(r.get())</span> shall
 be well formed.</p></div></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><div class='itemdescr'><p ><i>Returns:</i>  If <span class='texttt'>r</span> is empty, an empty <span class='texttt'>shared_ptr&lt;T&gt;</span>; otherwise, a
-<span class='texttt'>shared_ptr&lt;T&gt;</span> object that stores <span class='texttt'>const_cast&lt;T*&gt;(r.get())</span> and shares
-ownership with <span class='texttt'>r</span>.</p></div></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>w.get() == const_cast&lt;T*&gt;(r.get())</span> and
+<span class='texttt'>shared_ptr&lt;T&gt;</span> object that
+shares ownership
+with <span class='texttt'>r</span>.</p></div></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>w.get() == const_cast&lt;T*&gt;(r.get())</span> and
 <span class='texttt'>w.use_count() == r.use_count()</span>, where <span class='texttt'>w</span> is the return value.</p></div></div><div class='para' id='12'><div class='marginalizedparent'><a class='marginalized' href='#12'>12</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i><span class='space'></span> The seemingly equivalent expression
 <span class='texttt'>shared_ptr&lt;T&gt;(const_cast&lt;T*&gt;(r.get()))</span> will eventually result in
 undefined behavior, attempting to delete the same object twice. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
