--- a/lex.html
+++ b/lex.html
@@ -937,7 +937,7 @@ Such literals are prvalues and have type <span class='texttt'>bool</span>.</p></
 to member type; rather, a prvalue of this type is a null pointer constant and can be
 converted to a null pointer value or null member pointer value. See <a href='conv.ptr'>[conv.ptr]</a>
 and <a href='conv.mem'>[conv.mem]</a>.
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div id='ext'><h3 ><a class='secnum' href='#ext' style='min-width:103pt'>2.13.8</a> User-defined literals <a class='abbr_ref' href='lex.ext'>[lex.ext]</a></h3><p ><span class='indexparent'><a class='index' id='literal,user_defined'></a></span></p><pre class='bnf'><a id='nt:user-defined-literal'>user-defined-literal:</a>
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div id='ext'><h3 ><a class='secnum' href='#ext' style='min-width:103pt'>2.13.8</a> User-defined literals <a class='abbr_ref' href='lex.ext'>[lex.ext]</a></h3><p ><span class='indexparent'><a class='index' id='literal,user-defined'></a></span></p><pre class='bnf'><a id='nt:user-defined-literal'>user-defined-literal:</a>
     <i ><a href='lex.ext#nt:user-defined-integer-literal'>user-defined-integer-literal</a></i>
     <i ><a href='lex.ext#nt:user-defined-floating-literal'>user-defined-floating-literal</a></i>
     <i ><a href='lex.ext#nt:user-defined-string-literal'>user-defined-string-literal</a></i>
